--- a/whisper_to_GPT_MN.ipynb
+++ b/whisper_to_GPT_MN.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
+      "authorship_tag": "ABX9TyNU6gXMJiyXYqA5ZHu9l8gK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +32,8 @@
       "cell_type": "markdown",
       "source": [
         "# Actually useful speech to text via Whisper and GPT-4 🎤 ⌨ 😎\n",
+        "\n",
+        "*by [Max Noichl](https://homepage.univie.ac.at/maximilian.noichl/)*\n",
         "\n",
         "This notebook provides a workflow to turn a dictation, which you can create e.g. with Audacity on your PC, into a reasonable piece of text of the genre that you need. After transcribing your text using the whisper model, the notebook passes it to GPT-4, with the instructions to fix any dictation infedilities, and to adapt it to your predefined style, usually without any typos.\n",
         "\n",
@@ -72,7 +75,7 @@
         "id": "fjM27tWsI4dH",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -172,7 +175,7 @@
         "outputId": "dd579cb8-efb8-498b-db1f-b81ed72443c4",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +324,7 @@
         "outputId": "766db7ee-7c5a-4838-a95d-4509a19927cc",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +372,7 @@
         },
         "outputId": "975ef80d-6025-4734-d0d7-0503313837b8"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +395,11 @@
       "cell_type": "code",
       "source": [
         "#@markdown # Fixing transcriptions using GPT\n",
-        "\n",
+        "#@markdown Below, you can choose the style in which your dictation should be reworked. If you want to use one of the predefined\n",
+        "#@markdown writing styles, just paste it's name into the style bar. You can also add your own style instructions, which can be automatically\n",
+        "#@markdown from text-samples in the style-notebook which you can find [here](https://github.com/MNoichl/speech_to_text_with_whisper_to_GPT). You can also choose the\n",
+        "#@markdown language to use, and the OpenAI-model. I find that gpt-4, although more expensive, yields vastly better\n",
+        "#@markdown results than the other models.\n",
         "\n",
         "style = \"max_emails_en\" #@param {type:\"string\"}\n",
         "if style in loaded_style_dict.keys():\n",
@@ -404,7 +411,7 @@
         "if 'currently set language' == fixing_language:\n",
         "  fixing_language = language \n",
         "\n",
-        "OpenAi_model = \"gpt-4\" #@param [\"gpt-4\", \"3.5-turbo\"] {allow-input: true}\n",
+        "OpenAi_model = \"gpt-4\" #@param [\"gpt-4\", \"gpt-3.5-turbo\"] {allow-input: true}\n",
         "\n",
         "\n",
         "\n",
@@ -457,7 +464,7 @@
         "outputId": "8447d7fe-5013-4e90-cae3-068530fe2edd",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
